--- a/src/Panoramic/Pages/Widgets/AddWidgetDialog.xaml
+++ b/src/Panoramic/Pages/Widgets/AddWidgetDialog.xaml
@@ -4,25 +4,23 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Border Width="400" Padding="0 10 0 0">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition />
-            </Grid.RowDefinitions>
+    <Grid Width="400" Padding="0 10 0 0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
 
-            <Frame x:Name="ContentFrame" Grid.Row="0" />
+        <Frame x:Name="ContentFrame" Grid.Row="0" />
 
-            <Grid Grid.Row="1" Margin="0 20 0 0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
+        <Grid Grid.Row="1" Margin="0 20 0 0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
 
-                <Button Grid.Column="0" x:Name="PreviousButton" Click="PreviousButton_Click" Visibility="Collapsed">Previous</Button>
+            <Button Grid.Column="0" x:Name="PreviousButton" Click="PreviousButton_Click" Visibility="Collapsed">Previous</Button>
 
-                <Button Grid.Column="1" x:Name="NextButton" Click="NextButton_Click" IsEnabled="False" HorizontalAlignment="Right">Next</Button>
-            </Grid>
+            <Button Grid.Column="1" x:Name="NextButton" Click="NextButton_Click" IsEnabled="False" HorizontalAlignment="Right">Next</Button>
         </Grid>
-    </Border>
+    </Grid>
 </Page>
