--- a/src/Panoramic/Pages/Widgets/LinkCollection/LinkCollectionWidgetPage.xaml
+++ b/src/Panoramic/Pages/Widgets/LinkCollection/LinkCollectionWidgetPage.xaml
@@ -5,29 +5,27 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Panoramic.ViewModels.Widgets.LinkCollection">
 
-    <Border Padding="15" Background="{x:Bind ViewModel.Background, Mode=OneWay}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
+    <Grid Background="{x:Bind ViewModel.Background, Mode=OneWay}" CornerRadius="{StaticResource PanoramicWidgetCornerRadius}" Padding="15">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
-            <Border Grid.Row="0">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
+        <Border Grid.Row="0">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
 
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{x:Bind ViewModel.Title}" FontSize="16" Foreground="{StaticResource PanoramicWidgetForegroundBrush}" TextWrapping="Wrap" />
+                <TextBlock Grid.Column="0" Text="{x:Bind ViewModel.Title}" Foreground="{StaticResource PanoramicWidgetForegroundBrush}" FontSize="16" TextWrapping="Wrap" />
 
-                        <Border Visibility="{x:Bind ViewModel.FilterIconVisibility, Mode=OneWay}"
-                                Background="{StaticResource PanoramicMainWindowBackgroundBrush}"
-                                Margin="12 0 0 0" Padding="10 0" CornerRadius="6" ToolTipService.ToolTip="Filtered">
-                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE71C;" FontSize="10" />
-                        </Border>
-                    </StackPanel>
+                <StackPanel Grid.Column="1" Orientation="Horizontal">
+                    <Border Visibility="{x:Bind ViewModel.FilterIconVisibility, Mode=OneWay}"
+                            Background="{StaticResource PanoramicWidgetHighlightedBackgroundBrush}"
+                            Margin="0 0 8 0" Padding="10 0" CornerRadius="6" ToolTipService.ToolTip="Filtered">
+                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE71C;" FontSize="10" />
+                    </Border>
 
                     <DropDownButton Grid.Column="1" AutomationProperties.Name="Setting">
                         <DropDownButton.Content>
@@ -42,43 +40,43 @@
                             </MenuFlyout>
                         </DropDownButton.Flyout>
                     </DropDownButton>
-                </Grid>
-            </Border>
+                </StackPanel>
+            </Grid>
+        </Border>
 
-            <Border Grid.Row="1" Margin="0 15 0 0">
+        <Border Grid.Row="1" Margin="0 15 0 0">
 
-                <Border.Resources>
-                    <DataTemplate x:Key="LinkCollectionViewTemplate" x:DataType="vm:LinkViewModel">
-                        <HyperlinkButton Content="{x:Bind Title}"
-                                         NavigateUri="{x:Bind Uri}"
-                                         ToolTipService.ToolTip="{x:Bind Tooltip}"
-                                         HorizontalAlignment="Stretch"
-                                         HorizontalContentAlignment="Left"
-                                         Click="{x:Bind Clicked}" />
-                    </DataTemplate>
-                </Border.Resources>
+            <Border.Resources>
+                <DataTemplate x:Key="LinkCollectionViewTemplate" x:DataType="vm:LinkViewModel">
+                    <HyperlinkButton Content="{x:Bind Title}"
+                                 NavigateUri="{x:Bind Uri}"
+                                 ToolTipService.ToolTip="{x:Bind Tooltip}"
+                                 HorizontalAlignment="Stretch"
+                                 HorizontalContentAlignment="Left"
+                                 Click="{x:Bind Clicked}" />
+                </DataTemplate>
+            </Border.Resources>
 
-                <ListView
-                    ItemsSource="{x:Bind ViewModel.Links}"
-                    ItemTemplate="{StaticResource LinkCollectionViewTemplate}"
-                    SelectionMode="None">
+            <ListView
+                ItemsSource="{x:Bind ViewModel.Links}"
+                ItemTemplate="{StaticResource LinkCollectionViewTemplate}"
+                SelectionMode="None">
 
-                    <ListView.ItemContainerStyle>
-                        <Style TargetType="ListViewItem">
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="ListViewItem">
-                                        <ListViewItemPresenter ContentMargin="0" Padding="0" />
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style>
-                    </ListView.ItemContainerStyle>
-                </ListView>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="ListViewItem">
+                                    <ListViewItemPresenter ContentMargin="0" Padding="0" />
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
 
-            </Border>
+        </Border>
 
-        </Grid>
-    </Border>
+    </Grid>
 
 </Page>
