--- a/src/Panoramic/UserControls/WidgetPicker.xaml
+++ b/src/Panoramic/UserControls/WidgetPicker.xaml
@@ -4,10 +4,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <ScrollView Height="300" Margin="0 10 0 0">
+    <ScrollView Margin="0 10 0 0">
         <Grid RowSpacing="10">
             <Grid.RowDefinitions>
-                <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
@@ -32,6 +31,13 @@
                 <StackPanel>
                     <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Recent links</TextBlock>
                     <TextBlock HorizontalAlignment="Center" Margin="0 5 0 0">Links that you have recently clicked in Panoramic</TextBlock>
+                </StackPanel>
+            </ToggleButton>
+
+            <ToggleButton Grid.Row="3" x:Name="ChecklistToggle" Command="{x:Bind WidgetClicked}" CommandParameter="Checklist" HorizontalAlignment="Stretch">
+                <StackPanel>
+                    <TextBlock HorizontalAlignment="Center" FontWeight="Bold">Checklist</TextBlock>
+                    <TextBlock HorizontalAlignment="Center" Margin="0 5 0 0">List of tasks</TextBlock>
                 </StackPanel>
             </ToggleButton>
         </Grid>
