--- a/src/Panoramic/Pages/Widgets/PreferencesDialog.xaml
+++ b/src/Panoramic/Pages/Widgets/PreferencesDialog.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="Panoramic.Pages.PreferencesDialog"
+    x:Class="Panoramic.Pages.Widgets.PreferencesDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
